Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47143

QtWebEngine ignores mailto: links

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.0 Beta
    • 5.5.0
    • WebEngine
    • None
    • Kubuntu 14.10 64 bit, Qt SDK 5.5.0.
    • 708b852a1b587e68e0ccc6999d4e04fa830689e3

    Description

      QWebEngineView ignores mailto links, clicking them does nothing.
      There should be default behavior to open them using QDesktopServices.
      In QtWebKit default behavior could be changed by reimplementing QWebPage::acceptNavigationRequest().

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            allan.jensen Allan Sandfeld Jensen
            emdek MichaƂ Dutkiewicz
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes