External URL support

Support for launching external URLs such as mailto:

They are also routed through navigationRequested like they would have
been in QtWebKit.

[ChangeLog][QtWebEngineCore] External links such as mailto: are now handled. By
default they launch using QDesktopServices.

Change-Id: I83ed96e2330d54cae57f03648d471a8da9a82a30
Task-number: QTBUG-47143
Reviewed-by: Kai Koehne <kai.koehne@theqtcompany.com>